Implements Reservation index API endpoint
